--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,14 +1,23 @@
-# Multi-stage build for Flutter Web
-FROM dart:stable AS build
+# Flutter 빌드 스테이지
+FROM ubuntu:20.04 AS build
 
-# Flutter 설치
+# 필수 패키지 설치
+RUN apt-get update && apt-get install -y \
+    curl \
+    git \
+    unzip \
+    xz-utils \
+    zip \
+    libglu1-mesa \
+    && rm -rf /var/lib/apt/lists/*
+
+# Flutter SDK 설치
 RUN git clone https://github.com/flutter/flutter.git /flutter
-ENV PATH="$PATH:/flutter/bin"
+ENV PATH="/flutter/bin:$PATH"
 
-# Flutter 채널 설정
-RUN flutter channel stable
-RUN flutter upgrade
-RUN flutter config --enable-web
+# Flutter 설정
+RUN flutter config --enable-web --no-analytics
+RUN flutter doctor || true
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -16,14 +25,15 @@ WORKDIR /app
 # pubspec 파일들 복사
 COPY pubspec.* ./
 
-# 의존성 설치
+# 의존성 설치 (캐시 최적화)
 RUN flutter pub get
 
 # 소스 코드 복사
 COPY . .
 
-# 웹 빌드
-RUN flutter build web --release
+# 웹 빌드 (재시도 로직 포함)
+RUN flutter build web --release || \
+    (flutter clean && flutter pub get && flutter build web --release)
 
 # Production stage - Nginx
 FROM nginx:alpine
