--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -15,9 +15,10 @@ RUN apt-get update && apt-get install -y \
 RUN git clone https://github.com/flutter/flutter.git /flutter
 ENV PATH="/flutter/bin:$PATH"
 
-# Flutter 설정
+# Flutter 설정 (최소한만)
 RUN flutter config --enable-web --no-analytics
-RUN flutter doctor || true
+RUN flutter config --no-cli-animations
+ENV PUB_CACHE=/tmp/pub_cache
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -25,15 +26,14 @@ WORKDIR /app
 # pubspec 파일들 복사
 COPY pubspec.* ./
 
-# 의존성 설치 (캐시 최적화)
-RUN flutter pub get
+# 의존성 설치 (폰트 다운로드 건너뛰기)
+RUN flutter pub get --no-precompile || flutter pub get
 
 # 소스 코드 복사
 COPY . .
 
-# 웹 빌드 (재시도 로직 포함)
-RUN flutter build web --release || \
-    (flutter clean && flutter pub get && flutter build web --release)
+# 웹 빌드 (최소한의 옵션으로)
+RUN flutter build web --release --web-renderer html --no-tree-shake-icons
 
 # Production stage - Nginx
 FROM nginx:alpine
