--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,24 +1,8 @@
-# Flutter 빌드 스테이지
-FROM ubuntu:20.04 AS build
+# Flutter 빌드 스테이지 (공식 이미지 사용)
+FROM instrumentisto/flutter:latest AS build
 
-# 필수 패키지 설치
-RUN apt-get update && apt-get install -y \
-    curl \
-    git \
-    unzip \
-    xz-utils \
-    zip \
-    libglu1-mesa \
-    && rm -rf /var/lib/apt/lists/*
-
-# Flutter SDK 설치
-RUN git clone https://github.com/flutter/flutter.git /flutter
-ENV PATH="/flutter/bin:$PATH"
-
-# Flutter 설정 (최소한만)
+# 작업 환경 설정
 RUN flutter config --enable-web --no-analytics
-RUN flutter config --no-cli-animations
-ENV PUB_CACHE=/tmp/pub_cache
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -26,14 +10,14 @@ WORKDIR /app
 # pubspec 파일들 복사
 COPY pubspec.* ./
 
-# 의존성 설치 (폰트 다운로드 건너뛰기)
-RUN flutter pub get --no-precompile || flutter pub get
+# 의존성 설치
+RUN flutter pub get
 
 # 소스 코드 복사
 COPY . .
 
-# 웹 빌드 (최소한의 옵션으로)
-RUN flutter build web --release --web-renderer html --no-tree-shake-icons
+# 웹 빌드
+RUN flutter build web --release
 
 # Production stage - Nginx
 FROM nginx:alpine
