--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,9 @@ phases:
       - curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
       - mv /tmp/eksctl /usr/local/bin
       
+      # Helm 설치 (패키지 매니저)
+      - curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+      
   pre_build:
     commands:
       # ECR 로그인
@@ -52,6 +55,23 @@ phases:
       - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
       - echo "Adding CodeBuild role to EKS cluster auth..."
       - eksctl create iamidentitymapping --cluster $EKS_CLUSTER_NAME --region $AWS_DEFAULT_REGION --arn arn:aws:iam::236528210774:role/codebuild-snet05_group01webbeta01-service-role --group system:masters --username codebuild-service-role || echo "Role mapping already exists"
+      
+      # AWS Load Balancer Controller 설치
+      - echo "Setting up AWS Load Balancer Controller..."
+      - eksctl utils associate-iam-oidc-provider --cluster $EKS_CLUSTER_NAME --region $AWS_DEFAULT_REGION --approve || echo "OIDC provider already exists"
+      - eksctl create iamserviceaccount --cluster=$EKS_CLUSTER_NAME --region=$AWS_DEFAULT_REGION --namespace=kube-system --name=aws-load-balancer-controller --role-name "AmazonEKSLoadBalancerControllerRole" --attach-policy-arn=arn:aws:iam::aws:policy/ElasticLoadBalancingFullAccess --override-existing-serviceaccounts --approve || echo "ServiceAccount already exists"
+      
+      # Helm으로 ALB Controller 설치
+      - echo "Installing AWS Load Balancer Controller via Helm..."
+      - helm repo add eks https://aws.github.io/eks-charts || echo "Helm repo already added"
+      - helm repo update
+      - helm upgrade --install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$EKS_CLUSTER_NAME --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller --set region=$AWS_DEFAULT_REGION --set vpcId=$(aws eks describe-cluster --name $EKS_CLUSTER_NAME --region $AWS_DEFAULT_REGION --query "cluster.resourcesVpcConfig.vpcId" --output text) || echo "ALB Controller already installed"
+      
+      # ALB Controller가 준비될 때까지 대기
+      - echo "Waiting for ALB Controller to be ready..."
+      - kubectl wait --for=condition=ready pod -l app.kubernetes.io/name=aws-load-balancer-controller -n kube-system --timeout=300s || echo "ALB Controller pods not found, continuing..."
+      
+      # 애플리케이션 배포
       - echo "Waiting for kubectl to be ready..."
       - sleep 10
       - kubectl apply -f k8s/deployment.yaml --validate=false
