--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -16,8 +16,14 @@ RUN flutter pub get
 # 소스 코드 복사git
 COPY . .
 
-# 웹 빌드
-RUN flutter build web --release
+# 빌드 인자 정의
+ARG API_BASE_URL
+ARG NEWS_LIST_PATH
+
+# 웹 빌드 (환경변수 설정)
+RUN flutter build web --release \
+    --dart-define=API_BASE_URL=$API_BASE_URL \
+    --dart-define=NEWS_LIST_PATH=$NEWS_LIST_PATH
 
 # Production stage - Nginx
 FROM nginx:alpine
