--- a/buildspec.yml
+++ b/buildspec.yml
@@ -40,7 +40,7 @@ phases:
       # Docker 이미지 빌드 (Flutter 빌드는 Docker 내부에서 처리)
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -f Dockerfile.web -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker build -f Dockerfile.web -t $IMAGE_REPO_NAME:$IMAGE_TAG . --build-arg API_BASE_URL=http://snet-news-alb-1742498894.ap-northeast-2.elb.amazonaws.com --build-arg NEWS_LIST_PATH=/api/news
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG 236528210774.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       
   post_build:
