--- a/k8s/news-api-deployment.yaml
+++ b/k8s/news-api-deployment.yaml
@@ -14,11 +14,25 @@ spec:
       labels:
         app: news-api
     spec:
+      serviceAccountName: news-api-sa
       containers:
       - name: news-api
         image: yulee0461/news-api:latest
         ports:
         - containerPort: 8000
+        env:
+        - name: AWS_ACCESS_KEY_ID
+          valueFrom:
+            secretKeyRef:
+              name: aws-credentials
+              key: aws-access-key-id
+        - name: AWS_SECRET_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              name: aws-credentials
+              key: aws-secret-access-key
+        - name: AWS_DEFAULT_REGION
+          value: "ap-northeast-2"
         readinessProbe:
           httpGet:
             path: /health
